--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
   text-align: center;
+  font-family: "Montserrat";
+  padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
+.completed-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-top: 10px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+
+
+h1 {
+  font-family: "Montserrat";
+  font-weight: 900;
+
+}
+
+
+
+
+/*Media queries*/
+@media only screen and (max-width: 1000px) {
+  body {
+    background-color: lightblue;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 800px) {
+  body {
+    background-color:#DBF1FF;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: #BFD1FD;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: grey;
+  }
+}
+
+@media only screen and (max-width: 200px) {
+  body {
+    background-color: yellow;
   }
 }
