--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,12 +1,17 @@
 .Nav{
-    margin-bottom: 20px;
+
+    margin-bottom: 50px;
+    
     
 }
 
-.navbar-nav .nav-link{
-    float:left ;
+
+
+.nav-item{
+    padding:3px;
+     display: flex; flex-flow: row nowrap; 
 }
 
-.side{
-    float: right;
+.btn {
+    margin-left: 5px;
 }
